<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/register_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="64dp"
                    android:text="@string/register"
                    android:textColor="@color/text"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/register_helper_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="64dp"
                    android:text="@string/create_a_new_account_in_few_easy_steps"
                    android:textColor="@color/text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_title_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_name_text_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="24dp"
                    app:boxBackgroundColor="@color/overlay"
                    app:boxBackgroundMode="filled"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeErrorColor="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="Please enter your full name"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/primary"
                    app:hintTextColor="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_helper_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="56dp"
                        android:hint="Full Name"
                        android:inputType="textPersonName"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email_text_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:boxBackgroundColor="@color/overlay"
                    app:boxBackgroundMode="filled"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeErrorColor="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="Please enter your email"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/primary"
                    app:hintTextColor="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_name_text_holder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:minHeight="56dp"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_phone_text_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:boxBackgroundColor="@color/overlay"
                    app:boxBackgroundMode="filled"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeErrorColor="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperText="Please enter your phone number"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/primary"
                    app:hintTextColor="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_email_text_holder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_phone_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:minHeight="56dp"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password_text_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:boxBackgroundColor="@color/overlay"
                    app:boxBackgroundMode="filled"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeErrorColor="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:helperText="Please enter your password"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/primary"
                    app:hintTextColor="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_phone_text_holder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="56dp"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>




            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/primary"
            android:elevation="5dp"
            android:translationZ="16dp"
            android:outlineAmbientShadowColor="@color/primary"
            android:outlineSpotShadowColor="@color/primary"
            android:paddingHorizontal="64dp"
            android:paddingVertical="18dp"
            android:shadowColor="@color/primary"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>